[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/EntityFreeformContainer.gd" type="Script" id=1]
[ext_resource path="res://AppData/Icons/cards_stack_cross.png" type="Texture" id=2]

[node name="EntityFreeformContainer" type="VBoxContainer"]
margin_right = 742.0
margin_bottom = 514.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 5
script = ExtResource( 1 )

[node name="NameContainer" type="HBoxContainer" parent="."]
margin_right = 742.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )

[node name="DeleteEntryBtn" type="Button" parent="NameContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
hint_tooltip = "Delete Entry"
icon = ExtResource( 2 )
icon_align = 1
expand_icon = true

[node name="Control" type="Control" parent="NameContainer"]
margin_left = 44.0
margin_right = 64.0
margin_bottom = 40.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="NameContainer"]
margin_left = 68.0
margin_top = 13.0
margin_right = 114.0
margin_bottom = 27.0
text = "Name: "
valign = 1

[node name="EntityName" type="LineEdit" parent="NameContainer"]
margin_left = 118.0
margin_right = 318.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 0 )
expand_to_text_length = true
clear_button_enabled = true
placeholder_text = "Rename"

[node name="GraphEdit" type="GraphEdit" parent="."]
margin_top = 45.0
margin_right = 742.0
margin_bottom = 514.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_offset = Vector2( 0, -14 )
use_snap = false
zoom_step = 1.0
minimap_size = Vector2( 120, 80 )

[connection signal="tree_exited" from="." to="." method="_on_EntityFreeformContainer_tree_exited"]
[connection signal="pressed" from="NameContainer/DeleteEntryBtn" to="." method="_on_DeleteEntryBtn_pressed"]
[connection signal="text_entered" from="NameContainer/EntityName" to="." method="_on_EntityName_text_entered"]
